# graphix

./: .gitattributes  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  examples  fsapi  todo.md  vendor.py
graphix-compiler/: Cargo.toml
graphix-compiler/src/: env.rs  lib.rs
graphix-compiler/src/expr/: mod.rs  pattern.rs  print.rs  resolver.rs  test.rs
graphix-compiler/src/expr/parser/: arithexp.rs  mod.rs  test.rs  typexp.rs
graphix-compiler/src/node/: array.rs  bind.rs  callsite.rs  compiler.rs  data.rs  dynamic.rs  error.rs  genn.rs  lambda.rs  map.rs  mod.rs  module.rs  op.rs  pattern.rs  select.rs
graphix-compiler/src/typ/: cast.rs  contains.rs  fntyp.rs  matches.rs  mod.rs  normalize.rs  print.rs  setops.rs  tval.rs  tvar.rs
graphix-derive/: Cargo.toml
graphix-derive/src/: lib.rs
graphix-package/: Cargo.toml
graphix-package/src/: lib.rs  test.rs
graphix-package/src/skel/: Cargo.toml.hbs  deps.rs  lib.rs  mod.gx
graphix-rt/: Cargo.toml
graphix-rt/src/: gx.rs  lib.rs  rt.rs
graphix-shell/: Cargo.toml
graphix-shell/examples/: barchart.gx  browser.gx  bwidget.gx  chart.gx  layout.gx  list.gx  scroll.gx  sparkline.gx  sum.gx  table-advanced.gx  table.gx
graphix-shell/src/: AGENTS.md  completion.rs  deps.rs  input.rs  lib.rs  main.rs
graphix-shell/src/tui/: barchart.rs  block.rs  browser.gx  calendar.rs  canvas.rs  chart.rs  gauge.rs  input_handler.rs  layout.rs  line_gauge.rs  list.rs  mod.rs  paragraph.rs  scrollbar.rs  sparkline.rs  table.rs  tabs.rs  text.rs
graphix-stdlib/: Cargo.toml
graphix-stdlib/src/: array.gx  array.rs  core.gx  core.rs  fs.rs  lib.rs  map.gx  map.rs  net.rs  rand.rs  re.rs  str.gx  str.rs  time.gx  time.rs
graphix-stdlib/src/fs/: dir.rs  file.rs  fs.gx  metadata.rs  mod.rs  watch.rs
graphix-stdlib/src/test/: langtest.rs  libtest.rs  mod.rs
graphix-stdlib/src/test/lib/: array.rs  core.rs  fs.rs  map.rs  mod.rs  net.rs  regex.rs  string.rs
graphix-stdlib/src/test/lib/fs/: dir_ops.rs  integration.rs  metadata.rs  mod.rs  read.rs  (+4 more)
stdlib/graphix-package-array/: Cargo.toml
stdlib/graphix-package-array/src/: lib.rs
stdlib/graphix-package-array/src/graphix/: mod.gx  mod.gxi
stdlib/graphix-package-core/: Cargo.toml
stdlib/graphix-package-core/src/: buffer.rs  lib.rs  testing.rs
stdlib/graphix-package-core/src/graphix/: buffer.gx  buffer.gxi  mod.gx  mod.gxi
stdlib/graphix-package-db/: Cargo.toml
stdlib/graphix-package-db/src/: cursor.rs  encoding.rs  lib.rs  subscribe.rs  tree.rs  txn.rs
stdlib/graphix-package-db/src/graphix/: cursor.gx  cursor.gxi  mod.gx  mod.gxi  subscription.gx  subscription.gxi  txn.gx  txn.gxi
stdlib/graphix-package-fs/: Cargo.toml
stdlib/graphix-package-gui/: Cargo.toml
stdlib/graphix-package-gui/src/: clipboard.rs  convert.rs  event_loop.rs  lib.rs  render.rs  theme.rs  types.rs  window.rs
stdlib/graphix-package-gui/src/graphix/: button.gx  button.gxi  canvas.gx  canvas.gxi  chart.gx  chart.gxi  checkbox.gx  checkbox.gxi  clipboard.gx  clipboard.gxi  column.gx  column.gxi  combo_box.gx  combo_box.gxi  container.gx  container.gxi  grid.gx  grid.gxi  image.gx  image.gxi  keyboard_area.gx  keyboard_area.gxi  markdown.gx  markdown.gxi  menu.gx  menu.gxi  mod.gx  mod.gxi  mouse_area.gx  mouse_area.gxi  pick_list.gx  pick_list.gxi  progress_bar.gx  progress_bar.gxi  qr_code.gx  qr_code.gxi  radio.gx  radio.gxi  row.gx  row.gxi  (+26 more)
stdlib/graphix-package-gui/src/test/: canvas_test.rs  chart_test.rs  clipboard_test.rs  interaction_test.rs  mod.rs  widgets_test.rs
stdlib/graphix-package-gui/src/widgets/: button.rs  canvas.rs  combo_box.rs  container.rs  context_menu.rs  context_menu_widget.rs  grid.rs  iced_keyboard_area.rs  image.rs  keyboard_area.rs  markdown.rs  menu_bar.rs  menu_bar_widget.rs  mod.rs  mouse_area.rs  pick_list.rs  progress_bar.rs  qr_code.rs  radio.rs  rule.rs  scrollable.rs  slider.rs  space.rs  stack.rs  table.rs  text.rs  text_editor.rs  text_input.rs  toggle.rs  tooltip.rs
stdlib/graphix-package-hbs/: Cargo.toml
stdlib/graphix-package-hbs/src/: lib.rs
stdlib/graphix-package-hbs/src/graphix/: mod.gx  mod.gxi
stdlib/graphix-package-json/: Cargo.toml
stdlib/graphix-package-json/src/: lib.rs
stdlib/graphix-package-json/src/graphix/: mod.gx  mod.gxi
stdlib/graphix-package-map/: Cargo.toml
stdlib/graphix-package-map/src/: lib.rs
stdlib/graphix-package-map/src/graphix/: mod.gx
stdlib/graphix-package-re/: Cargo.toml
stdlib/graphix-package-re/src/: lib.rs
stdlib/graphix-package-re/src/graphix/: mod.gx
stdlib/graphix-package-str/: Cargo.toml
stdlib/graphix-package-str/src/: lib.rs
stdlib/graphix-package-str/src/graphix/: mod.gx  mod.gxi
stdlib/graphix-package-sys/: Cargo.toml
stdlib/graphix-package-sys/src/: dir.rs  dirs_mod.rs  fs.rs  io.rs  lib.rs  metadata.rs  net.rs  tcp.rs  time.rs  tls.rs  watch.rs
stdlib/graphix-package-sys/src/graphix/: dirs.gx  dirs.gxi  fs.gx  fs.gxi  io.gx  io.gxi  mod.gx  mod.gxi  net.gx  net.gxi  tcp.gx  tcp.gxi  time.gx  time.gxi  tls.gx  tls.gxi
stdlib/graphix-package-time/: Cargo.toml
stdlib/graphix-package-toml/: Cargo.toml
stdlib/graphix-package-toml/src/: lib.rs
stdlib/graphix-package-toml/src/graphix/: mod.gx  mod.gxi
stdlib/graphix-package-tui/: Cargo.toml
stdlib/graphix-package-tui/src/: lib.rs
stdlib/graphix-package-tui/src/graphix/: browser.gx  browser.gxi
stdlib/graphix-package-xls/: Cargo.toml
stdlib/graphix-package-xls/src/: lib.rs
stdlib/graphix-package-xls/src/graphix/: mod.gx  mod.gxi
stdlib/graphix-tests/: Cargo.toml
stdlib/graphix-tests/certs/: ca.key  ca.pem  gen.sh  server.key  server.pem
stdlib/graphix-tests/src/: lib.rs
stdlib/graphix-tests/src/lang/: arrays.rs  basics.rs  byref.rs  datetime.rs  errors.rs  functions.rs  interfaces.rs  maps.rs  modules.rs  select.rs  tuples_structs.rs  types.rs  variants.rs
stdlib/graphix-tests/src/lib_tests/: args.rs  array.rs  bitwise.rs  buffer.rs  core.rs  db.rs  dirs.rs  hbs.rs  http.rs  json.rs  list.rs  mod.rs  net.rs  pack.rs  sqlite.rs  str.rs  sys.rs  tcp.rs  tls.rs  toml.rs  typecheck.rs  xls.rs
(+658 files in other folders)
