[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[profile.dev]
opt-level = "s"
lto = "thin"
debug = true

[workspace.dependencies]
anyhow = "1"
arcstr = { version = "1", features = ["serde"] }
async-trait = { version = "0.1" }
bitflags = "2"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "^0.4.24", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
combine = "4"
compact_str = { version = "0.9", features = ["serde"] }
crossterm = { version = "0.29", features = ["event-stream"] }
derive_builder = "0.20"
dirs = "6"
enumflags2 = "0.7"
fish-printf = "0.2.1"
flexi_logger = "0.31"
futures = "0.3"
fxhash = "0.2"
immutable-chunkmap = "2"
indexmap = "2"
log = "0.4"
netidx-core = { version = "0.28.3", path = "../netidx/netidx-core" }
netidx-protocols = { version = "0.28.3", path = "../netidx/netidx-protocols" }
netidx-value = { version = "0.28.3", path = "../netidx/netidx-value" }
netidx = { version = "0.28.3", default-features = false, path = "../netidx/netidx" }
parking_lot = "0.12.1"
rand = "0.9"
ratatui = { version = "0.29", features = ["widget-calendar"] }
reedline = "0.41"
regex = "1"
rust_decimal = { version = "1", features = [
    "serde-with-float",
    "serde-with-str",
    "serde-with-arbitrary-precision",
] }
serde_derive = "1"
serde_json = "1"
serde = { version = "1", features = ["rc"] }
sled = { version = "0.34" }
smallvec = { version = "1", features = ["const_generics", "union"] }
time = "0.3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "time",
    "io-util",
    "fs",
    "sync",
    "process",
    "macros",
    "signal",
    "io-std",
] }
triomphe = { version = "0.1" }

[workspace]
resolver = "2"
members = ["graphix-shell", "graphix-compiler", "graphix-rt", "graphix-stdlib"]
