[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[profile.dev]
opt-level = "s"
lto = "thin"
debug = true

[workspace.dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
anyhow = "1"
arcstr = { version = "1", features = ["serde"] }
async-trait = { version = "0.1" }
bitflags = "2"
bytes = { version = "1", features = ["serde"] }
cargo_toml = "0.22.3"
chrono = { version = "^0.4.24", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
cp_r = "0.5"
combine = "4"
compact_str = { version = "0.9", features = ["serde"] }
crossterm = { version = "0.29", features = ["event-stream"] }
const_format = "0.2"
crates_io_api = "0.12"
derive_builder = "0.20"
dirs = "6"
env_logger = "0.11"
enumflags2 = "0.7"
escaping = "0.2.2"
extended-notify = "0.1.0"
fish-printf = "0.2.1"
flate2 = "1"
flexi_logger = "0.31"
futures = "0.3"
fd-lock = "4"
fxhash = "0.2"
handlebars = "6"
immutable-chunkmap = { version = "2.1", features = ["pool", "serde"] }
indexmap = "2"
log = "0.4"
netidx-core = { version = "0.31.0", path = "../netidx/netidx-core" }
netidx-protocols = { version = "0.31.0", path = "../netidx/netidx-protocols" }
netidx-value = { version = "0.31.3", path = "../netidx/netidx-value" }
netidx = { version = "0.31.0", default-features = false, path = "../netidx/netidx" }
parking_lot = "0.12.1"
poolshark = { version = "0.2.6" }
rand = "0.10"
ratatui = { version = "0.30", features = ["widget-calendar"] }
reedline = "0.45"
regex = "1"
reqwest = "0.13"
rust_decimal = { version = "1", features = [
    "serde-with-float",
    "serde-with-str",
    "serde-with-arbitrary-precision",
] }
serde_derive = "1"
serde_json = "1"
serde = { version = "1", features = ["rc"] }
sled = { version = "0.34" }
smallvec = { version = "1", features = ["const_generics", "union"] }
tar = "0.4"
tempfile = "3"
time = "0.3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "time",
    "io-util",
    "fs",
    "sync",
    "process",
    "macros",
    "signal",
    "io-std",
] }
toml = { version = "1" }
toml_edit = { version = "0.25" }
triomphe = { version = "0.1" }
uuid = "1"
walkdir = "2.5"
which = "8"
arboard = "3"
winit = { version = "0.30", features = ["rwh_06"] }

# iced GUI framework (sub-crates used directly for low-level control)
iced_core = "0.14"
iced_renderer = { version = "0.14", features = ["wgpu", "wgpu-bare"] }
iced_runtime = "0.14"
iced_wgpu = "0.14"
iced_widget = { version = "0.14", features = ["canvas", "image", "markdown", "qr_code", "svg"] }

[workspace]
resolver = "2"
members = [
    "graphix-shell",
    "graphix-compiler",
    "graphix-rt",
    "graphix-derive",
    "graphix-package",
    "stdlib/graphix-package-core",
    "stdlib/graphix-package-array",
    "stdlib/graphix-package-fs",
    "stdlib/graphix-package-map",
    "stdlib/graphix-package-net",
    "stdlib/graphix-package-rand",
    "stdlib/graphix-package-re",
    "stdlib/graphix-package-str",
    "stdlib/graphix-package-time",
    "stdlib/graphix-package-tui",
    "stdlib/graphix-package-gui",
    "stdlib/graphix-tests"
]
