[package]
name = "graphix-compiler"
version = "0.1.3"
authors = ["Eric Stokes <eestokes@pm.me>"]
edition = "2024"
homepage = "https://graphix-lang.github.io/graphix"
repository = "https://github.com/graphix-lang/graphix"
description = "A dataflow language for UIs and network programming, compiler"
documentation = "https://docs.rs/graphix-compiler"
readme = "../README.md"
license = "MIT"
categories = ["network-programming", "compilers", "gui"]

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
combine = { workspace = true }
compact_str = { workspace = true }
derive_builder = { workspace = true }
enumflags2 = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
immutable-chunkmap = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
netidx-core = { workspace = true }
netidx-protocols = { workspace = true }
netidx-value = { workspace = true }
netidx = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde_derive = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
tokio = { workspace = true }
triomphe = { workspace = true }

[dev-dependencies]
proptest = "1"
env_logger = "0.11"
