[package]
name = "graphix-derive"
version = "0.5.0"
authors = ["Eric Stokes <eestokes@pm.me>"]
edition = "2024"
license = "MIT"
description = "A dataflow language for UIs derive macros for package management"
homepage = "https://graphix-lang.github.io/graphix"
repository = "https://github.com/graphix-lang/graphix"
documentation = "https://docs.rs/graphix-derive"
readme = "../README.md"
categories = ["network-programming", "compilers", "gui"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
cargo_toml = { workspace = true }
graphix-compiler = { version = "0.5.0", path = "../graphix-compiler" }
toml_edit = { workspace = true }
walkdir = { workspace = true }
