[package]
name = "graphix-package"
version = "0.6.0"
authors = ["Eric Stokes <eestokes@pm.me>"]
edition = "2024"
homepage = "https://graphix-lang.github.io/graphix"
repository = "https://github.com/graphix-lang/graphix"
description = "A dataflow language for UIs and network programming, package types"
documentation = "https://docs.rs/graphix-package"
readme = "../README.md"
license = "MIT"
categories = ["network-programming", "compilers", "gui"]
exclude = ["../book"]

[dependencies]
crates_io_api = { workspace = true }
cp_r = { workspace = true }
dirs = { workspace = true }
fd-lock = { workspace = true }
graphix-compiler = { version = "0.6.0", path = "../graphix-compiler" }
graphix-derive = { version = "0.6.0", path = "../graphix-derive" }
graphix-rt = { version = "0.6.0", path = "../graphix-rt" }
anyhow = { workspace = true }
netidx-core = { workspace = true }
netidx-value = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
handlebars = { workspace = true }
arcstr = { workspace = true }
fxhash = { workspace = true }
serde_json = { workspace = true }
which = { workspace = true }
walkdir = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
compact_str = { workspace = true }
indexmap = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
