[package]
name = "graphix-rt"
version = "0.1.17"
authors = ["Eric Stokes <eestokes@pm.me>"]
edition = "2024"
homepage = "https://graphix-lang.github.io/graphix"
repository = "https://github.com/graphix-lang/graphix-rt"
description = "A dataflow language for UIs and network programming, runtime"
documentation = "https://docs.rs/graphix-rt"
readme = "../README.md"
license = "MIT"
categories = ["network-programming", "compilers", "gui"]

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
combine = { workspace = true }
compact_str = { workspace = true }
derive_builder = { workspace = true }
dirs = { workspace = true }
enumflags2 = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
graphix-compiler = { version = "0.1.9", path = "../graphix-compiler" }
immutable-chunkmap = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
netidx = { workspace = true }
netidx-core = { workspace = true }
netidx-protocols = { workspace = true }
netidx-value = { workspace = true }
parking_lot = { workspace = true }
poolshark = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
smallvec = { workspace = true }
tokio = { workspace = true }
triomphe = { workspace = true }

[dev-dependencies]
proptest = "1"
env_logger = "0.11"
