[package]
name = "graphix-shell"
version = "0.4.0"
authors = ["Eric Stokes <eestokes@pm.me>"]
edition = "2024"
license = "MIT"
description = "A dataflow language for UIs and network programming"
homepage = "https://graphix-lang.github.io/graphix"
repository = "https://github.com/graphix-lang/graphix"
documentation = "https://docs.rs/graphix-shell"
readme = "../README.md"
categories = ["network-programming", "compilers", "gui"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[[bin]]
name = "graphix"
path = "src/main.rs"

[features]
default = ["gui"]
krb5_iov = [
    "graphix-compiler/krb5_iov",
    "graphix-rt/krb5_iov",
    "netidx/krb5_iov",
]
gui = ["dep:graphix-package-gui"]

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
clap = { workspace = true }
derive_builder = { workspace = true }
enumflags2 = { workspace = true }
flexi_logger = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
graphix-compiler = { version = "0.4.0", path = "../graphix-compiler" }
graphix-package = { version = "0.4.0", path = "../graphix-package" }
graphix-package-array = { version = "0.4.0", path = "../stdlib/graphix-package-array" }
graphix-package-core = { version = "0.4.0", path = "../stdlib/graphix-package-core" }
graphix-package-fs = { version = "0.4.0", path = "../stdlib/graphix-package-fs" }
graphix-package-map = { version = "0.4.0", path = "../stdlib/graphix-package-map" }
graphix-package-rand = { version = "0.4.0", path = "../stdlib/graphix-package-rand" }
graphix-package-re = { version = "0.4.0", path = "../stdlib/graphix-package-re" }
graphix-package-str = { version = "0.4.0", path = "../stdlib/graphix-package-str" }
graphix-package-time = { version = "0.4.0", path = "../stdlib/graphix-package-time" }
graphix-package-net = { version = "0.4.0", path = "../stdlib/graphix-package-net" }
graphix-package-tui = { version = "0.4.0", path = "../stdlib/graphix-package-tui" }
graphix-package-gui = { version = "0.4.0", path = "../stdlib/graphix-package-gui", optional = true }
graphix-rt = { version = "0.4.0", path = "../graphix-rt" }
log = { workspace = true }
netidx = { workspace = true }
netidx-core = { workspace = true }
poolshark = { workspace = true }
reedline = { workspace = true }
tokio = { workspace = true }
