[package]
name = "graphix-shell"
version = "0.7.0"
authors = ["Eric Stokes <eestokes@pm.me>"]
edition = "2024"
license = "MIT"
description = "A dataflow language for UIs and network programming"
homepage = "https://graphix-lang.github.io/graphix"
repository = "https://github.com/graphix-lang/graphix"
documentation = "https://docs.rs/graphix-shell"
readme = "../README.md"
categories = ["network-programming", "compilers", "gui"]
exclude = ["book", "../book"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[[bin]]
name = "graphix"
path = "src/main.rs"

[features]
default = ["gui"]
krb5_iov = [
    "graphix-compiler/krb5_iov",
    "graphix-rt/krb5_iov",
    "graphix-package-sys/krb5_iov",
    "graphix-package-http/krb5_iov",
    "netidx/krb5_iov",
]
gui = ["dep:graphix-package-gui"]

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
clap = { workspace = true }
derive_builder = { workspace = true }
enumflags2 = { workspace = true }
flexi_logger = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
graphix-compiler = { version = "0.7.0", path = "../graphix-compiler" }
graphix-package = { version = "0.7.0", path = "../graphix-package" }
graphix-package-array = { version = "0.7.0", path = "../stdlib/graphix-package-array" }
graphix-package-core = { version = "0.7.0", path = "../stdlib/graphix-package-core" }
graphix-package-http = { version = "0.7.0", path = "../stdlib/graphix-package-http" }
graphix-package-list = { version = "0.7.0", path = "../stdlib/graphix-package-list" }
graphix-package-map = { version = "0.7.0", path = "../stdlib/graphix-package-map" }
graphix-package-rand = { version = "0.7.0", path = "../stdlib/graphix-package-rand" }
graphix-package-re = { version = "0.7.0", path = "../stdlib/graphix-package-re" }
graphix-package-str = { version = "0.7.0", path = "../stdlib/graphix-package-str" }
graphix-package-args = { version = "0.7.0", path = "../stdlib/graphix-package-args" }
graphix-package-sys = { version = "0.7.0", path = "../stdlib/graphix-package-sys" }
graphix-package-tui = { version = "0.7.0", path = "../stdlib/graphix-package-tui" }
graphix-package-gui = { version = "0.7.0", path = "../stdlib/graphix-package-gui", optional = true }
graphix-rt = { version = "0.7.0", path = "../graphix-rt" }
log = { workspace = true }
netidx = { workspace = true }
netidx-core = { workspace = true }
poolshark = { workspace = true }
reedline = { workspace = true }
tokio = { workspace = true }
