[package]
name = "graphix-package-array"
version = "0.7.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2024"
homepage = "https://graphix-lang.github.io/graphix"
repository = "https://github.com/graphix-lang/graphix"
description = "A dataflow language for UIs and network programming, array package"
documentation = "https://docs.rs/graphix-package-array"
readme = "../../README.md"
license = "MIT"
categories = ["network-programming", "compilers", "gui"]
exclude = ["../../book"]

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
compact_str = { workspace = true }
fxhash = { workspace = true }
graphix-compiler = { version = "0.7.0", path = "../../graphix-compiler" }
graphix-derive = { version = "0.7.0", path = "../../graphix-derive" }
graphix-rt = { version = "0.7.0", path = "../../graphix-rt" }
graphix-package = { version = "0.7.0", path = "../../graphix-package" }
graphix-package-core = { version = "0.7.0", path = "../graphix-package-core" }
netidx-core = { workspace = true }
netidx-value = { workspace = true }
netidx = { workspace = true }
smallvec = { workspace = true }
tokio = { workspace = true }
triomphe = { workspace = true }
