[package]
name = "graphix-package-db"
version = "0.6.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2024"
homepage = "https://graphix-lang.github.io/graphix"
repository = "https://github.com/graphix-lang/graphix"
description = "A dataflow language for UIs and network programming, embedded database package"
documentation = "https://docs.rs/graphix-package-db"
readme = "../../README.md"
license = "MIT"
categories = ["network-programming", "compilers", "database"]
exclude = ["../../book"]

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
bytes = { workspace = true }
compact_str = { workspace = true }
fxhash = { workspace = true }
futures = { workspace = true }
graphix-compiler = { version = "0.6.0", path = "../../graphix-compiler" }
graphix-derive = { version = "0.6.0", path = "../../graphix-derive" }
graphix-package = { version = "0.6.0", path = "../../graphix-package" }
graphix-package-core = { version = "0.6.0", path = "../graphix-package-core" }
graphix-rt = { version = "0.6.0", path = "../../graphix-rt" }
parking_lot = { workspace = true }
netidx-core = { workspace = true }
netidx-derive = { workspace = true }
netidx-value = { workspace = true }
netidx = { workspace = true }
poolshark = { workspace = true }
sled = { workspace = true }
tokio = { workspace = true }
triomphe = { workspace = true }
uuid = { workspace = true }
