[package]
name = "graphix-package-sys"
version = "0.7.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2024"
homepage = "https://graphix-lang.github.io/graphix"
repository = "https://github.com/graphix-lang/graphix"
description = "A dataflow language for UIs and network programming, sys package"
documentation = "https://docs.rs/graphix-package-sys"
readme = "../../README.md"
license = "MIT"
categories = ["network-programming", "compilers", "gui"]
exclude = ["../../book"]

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
compact_str = { workspace = true }
dirs = { workspace = true }
enumflags2 = { workspace = true }
extended-notify = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
graphix-compiler = { version = "0.7.0", path = "../../graphix-compiler" }
graphix-derive = { version = "0.7.0", path = "../../graphix-derive" }
graphix-package = { version = "0.7.0", path = "../../graphix-package" }
graphix-package-core = { version = "0.7.0", path = "../graphix-package-core" }
graphix-rt = { version = "0.7.0", path = "../../graphix-rt" }
log = { workspace = true }
netidx-core = { workspace = true }
netidx-protocols = { workspace = true }
netidx-value = { workspace = true }
netidx = { workspace = true }
parking_lot = { workspace = true }
poolshark = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
smallvec = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
triomphe = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
tokio = { workspace = true }
arcstr = { workspace = true }
tempfile = { workspace = true }
